# tauri-plugin-keychain

./: .gitignore  Cargo.toml  README.md  api-iife.js  build.rs  rollup.config.js
android/: build.gradle.kts
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/: AndroidManifest.xml
android/src/main/java/: KeychainAuthenticatorService.kt  KeychainPlugin.kt
android/src/main/res/xml/: authenticator.xml
android/src/test/java/: ExampleUnitTest.kt
guest-js/: index.ts
ios/: Package.swift  README.md
ios/Sources/: KeychainPlugin.swift
ios/Tests/PluginTests/: PluginTests.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: save_item.toml
permissions/schemas/: schema.json
src/: desktop.rs  lib.rs  mobile.rs  models.rs
